spacing corrected

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ hr {
   font-size: 16px;
   line-height: 24px;
   color: #9d9895;
-  margin-top: 41px;
+  margin-top: 31px;
 }
 
 .block2-img {
@@ -289,7 +289,7 @@ hr {
 }
 
 .items h3 {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   font-size: 36px;
   font-weight: 600;
   line-height: 54px;
